# veritas-ai-agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_READY_CHECKLIST.md  LICENSE  README.md  SECURITY.md  veritas_ai_agent_prd.md
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/profile/: README.md
.github/workflows/: ci.yml  release.yml
backend-verification-service/: .env.example  .env.production  .eslintrc.json  Dockerfile  package-lock.json  package.json  test-output.ps1  test-results.txt  test-results2.txt  test-results3.txt  tsconfig.json
backend-verification-service/src/: index.ts  metrics.ts
browser-extension/: .eslintrc.json  Dockerfile  manifest.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  webpack.config.js
browser-extension/src/: background.js  contentScript.ts  options.html  options.tsx  popup.html  popup.tsx  styles.css
ci-cd/: README.md
ci-cd/.github/workflows/: ci.yml  (+1 more)
data-pipeline/: .env.example  .env.production  .env.test  .safety-project.ini  Dockerfile  pyproject.toml
data-pipeline/src/veritas_data_pipeline/: main.py  metrics.py  tasks.py
data-pipeline/src/veritas_data_pipeline/services/: database_service.py  document_processor.py  embedding_service.py  ipfs_service.py  metrics_service.py
data-pipeline/tests/: test_ingest.py  test_main.py  test_simple.py
docs/: API.md  ARCHITECTURE.md  CHROME_WEB_STORE_COMPLIANCE.md  PERFORMANCE_TESTING.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_CHECKLIST.md  RUNBOOK.md  SECURITY_AUDIT.md  TESTING.md
infra/: README.md
infra/argocd/: veritas-backend-app.yaml  veritas-data-pipeline-app.yaml  veritas-monitoring-app.yaml
infra/backup/: backup-config.yaml
infra/k8s/: backend-deployment.yaml  network-policies.yaml  network-policy.yaml
infra/monitoring/: alerts.yaml  grafana-dashboard.json  loki-config.yaml  pagerduty.yaml  prometheus.yaml  veritas-alerts.yaml
infra/postgres/: schema.sql
infra/terraform/: main.tf
scripts/: backup-and-recovery.sh  performance-test.sh  security-audit.sh
tests/: e2e_integration_test.py
(+17 files in other folders)
