[tool.poetry]
name = "veritas-data-pipeline"
version = "1.1.0"
description = "Data ingestion and embedding pipeline for Veritas AI Agent."
authors = ["anything.ai <info@anything.ai>"]
packages = [
    { include = "veritas_data_pipeline", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.35.0"
requests = "^2.32.4"
aiohttp = "^3.10.0"
asyncpg = "^0.30.0"
ipfshttpclient = "^0.8.0a2"
python-docx = "^1.1.0"
PyPDF2 = "^3.0.0"
beautifulsoup4 = "^4.12.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
openai = "^1.58.0"
sentence-transformers = "^2.7.0"
numpy = "^1.26.0"
pandas = "^2.2.0"
pydantic = "^2.10.0"
python-multipart = "^0.0.6"
aiofiles = "^24.1.0"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
prometheus-client = "^0.20.0"
celery = "^5.4.0"
flower = "^2.0.1"
pytest = "^8.2.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 